--- a/index.html
+++ b/index.html
@@ -8,11 +8,18 @@
   <body>
     <h1>Goodfellas</h1>
 
-    <p>Goodfellas (1990), directed by Martin Scorsese, tells the true story of Henry Hill, a man who rises through the ranks of the mob in New York. The film follows his life in organized crime, his relationships with mobsters like Jimmy and Tommy, and the eventual downfall caused by betrayal, violence, and the law. It explores themes of loyalty, crime, and consequences. Known for its strong performances, especially by Joe Pesci, Goodfellas is considered one of the greatest crime films ever made.</p>
+    <p>
+      Goodfellas (1990), directed by Martin Scorsese, tells the true story of
+      Henry Hill, a man who rises through the ranks of the mob in New York. The
+      film follows his life in organized crime, his relationships with mobsters
+      like Jimmy and Tommy, and the eventual downfall caused by betrayal,
+      violence, and the law. It explores themes of loyalty, crime, and
+      consequences. Known for its strong performances, especially by Joe Pesci,
+      Goodfellas is considered one of the greatest crime films ever made.
+    </p>
 
     <p><a href="cast.html">Cast</a></p>
 
     <p><a href="contact.html">Contact</a></p>
-
   </body>
 </html>
