--- a/cast.html
+++ b/cast.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HTML Lab 1 | Cast</title>
-</head>
-<body>
-<h1>Cast</h1>     
-</body>
+  </head>
+  <body>
+    <h1>Cast</h1>
+    <ul type="square">
+      <li>Ray Liotta as Henry Hill</li>
+      <li>Robert De Niro as James "Jimmy" Conway</li>
+      <li>Joe Pesci as Tommy DeVito</li>
+      <li>Lorraine Bracco as Karen Hill</li>
+      <li>Paul Sorvino as Paulie Cicero</li>
+      <li>Samuel L. Jackson as Stacks Edwards</li>
+      <li>Raymond J. Barry as Morrie Kessler</li>
+    </ul>
+    <a href="index.html">Home</a>
+  </body>
 </html>
