added img to index, completed cast

--- a/cast.html
+++ b/cast.html
@@ -16,6 +16,50 @@
       <li>Samuel L. Jackson as Stacks Edwards</li>
       <li>Raymond J. Barry as Morrie Kessler</li>
     </ul>
+
+    <ul>
+      <li>
+        Ray Liotta – Known for his breakthrough role in Goodfellas, Liotta
+        gained fame for his portrayal of Henry Hill. He also starred in Field of
+        Dreams and appeared in various TV shows and films throughout his career.
+      </li>
+      <li>
+        Robert De Niro – An iconic American actor known for his collaborations
+        with Martin Scorsese. He is celebrated for roles in Taxi Driver, The
+        Godfather Part II, and Raging Bull, often portraying intense and complex
+        characters.
+      </li>
+      <li>
+        Joe Pesci – A versatile actor famous for his roles in Goodfellas, Home
+        Alone, and My Cousin Vinny. Known for playing both comedic and dangerous
+        characters with equal skill, he earned an Oscar for his role in
+        Goodfellas.
+      </li>
+      <li>
+        Lorraine Bracco – An accomplished actress best known for playing Dr.
+        Jennifer Melfi in The Sopranos. She also starred in Goodfellas, gaining
+        recognition for her role as Henry Hill's wife, Karen.
+      </li>
+      <li>
+        Paul Sorvino – A veteran actor with a career spanning decades, Sorvino
+        is known for his role as Paulie Cicero in Goodfellas and his
+        performances in Reds and The Firm. He is also a respected voice in
+        opera.
+      </li>
+      <li>
+        Samuel L. Jackson – One of the most prolific actors of his generation,
+        Jackson is famous for his roles in Pulp Fiction, The Avengers franchise,
+        and Django Unchained. His commanding presence and diverse roles have
+        made him a Hollywood legend.
+      </li>
+      <li>
+        Raymond J. Barry – An American actor known for his versatile roles in
+        both film and television. He is best recognized for his portrayal of the
+        villainous "Uncle Junior" in The Sandlot (1993) and for his roles in The
+        West Wing and Justified. Barry has appeared in numerous dramas and
+        thrillers, often playing intense and complex characters.
+      </li>
+    </ul>
     <a href="index.html">Home</a>
   </body>
 </html>
