--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
   <body>
     <h1>Goodfellas</h1>
 
+    <img
+      src="https://image.tmdb.org/t/p/original/mh76y0lky9TjGvNjLSgPLcy1B4K.jpg"
+      width="350"
+      alt="Goodfellas movie poster"
+    />
+
     <p>
       Goodfellas (1990), directed by Martin Scorsese, tells the true story of
       Henry Hill, a man who rises through the ranks of the mob in New York. The
